--- a/clusters/appset.yaml
+++ b/clusters/appset.yaml
@@ -70,6 +70,7 @@ spec:
         path: '{{.path.path}}'
         directory:
           recurse: true
+          ignore: "infr-apps"
       syncPolicy:
         automated:
           prune: true
