--- a/clusters/demo1/appset.yaml
+++ b/clusters/demo1/appset.yaml
@@ -37,8 +37,8 @@ apiVersion: argoproj.io/v1alpha1
 kind: ApplicationSet
 metadata:
   labels:
-    app.kubernetes.io/instance: k8s-spb2-backend1-install-all
-  name: k8s-spb2-backend1-install-all
+    app.kubernetes.io/instance: kind-spoke-1
+  name: kind-spoke-1
   namespace: argocd
 spec:
   generators:
