--- a/clusters/demo1/infr-apps/custom-resource.yaml
+++ b/clusters/demo1/infr-apps/custom-resource.yaml
@@ -17,5 +17,5 @@ spec:
     namespace: kube-system
   source:
       repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
-      targetRevision: master
+      targetRevision: HEAD
       path: clusters/demo1/custom-resource
