--- a/clusters/demo1/custom-resource/clusterrole.yaml
+++ b/clusters/demo1/custom-resource/clusterrole.yaml
@@ -53,6 +53,11 @@ rules:
   - apiGroups: [""]
     resources: ["events"]
     verbs: ["create", "list"]
+  # Rule to allow management of the temporary hook binding
+  - apiGroups: ["rbac.authorization.k8s.io"]
+    resources: ["clusterrolebindings"]
+    resourceNames: ["argocd-manager-temporary-admin-hook"]
+    verbs: ["create", "update", "patch", "delete"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
