--- a/clusters/demo1/custom-resource/pre-hook.yaml
+++ b/clusters/demo1/custom-resource/pre-hook.yaml
@@ -1,7 +1,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  generateName: full-install-  
+  name: argocd-manager-temporary-admin-hook  
   annotations:
     argocd.argoproj.io/hook: PreSync
     argocd.argoproj.io/hook-delete-policy: HookFailed,HookSucceeded
