--- a/clusters/demo1/custom-resource/clusterrolebinding.yaml
+++ b/clusters/demo1/custom-resource/clusterrolebinding.yaml
@@ -5,7 +5,7 @@ metadata:
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: argocd-manager-watcher
+  name: argocd-manager-role
 subjects:
   - kind: ServiceAccount
     name: argocd-manager
