--- a/clusters/demo1/custom-resource/clusterrolebinding.yaml
+++ b/clusters/demo1/custom-resource/clusterrolebinding.yaml
@@ -1,11 +1,12 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: argocd-manager-watcher
+  # This is the permanent binding that we will patch
+  name: argocd-manager-main-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: argocd-manager-watcher
+  name: argocd-manager-watcher # Default to the watcher role
 subjects:
   - kind: ServiceAccount
     name: argocd-manager
