--- a/clusters/demo1/custom-resource/pre-sync-patch-hook.yaml
+++ b/clusters/demo1/custom-resource/pre-sync-patch-hook.yaml
@@ -19,6 +19,7 @@ spec:
           - clusterrolebinding
           - argocd-manager-main-binding
           - --type=json
-          - -p= '[{"op": "replace", "path": "/roleRef/name", "value":"argocd-manager-full"}]'
+          - -p
+          - '[{"op": "replace", "path": "/roleRef/name", "value":"argocd-manager-full"}]'
       restartPolicy: Never
   backoffLimit: 1
