--- a/clusters/demo1/custom-resource/clusterrole.yaml
+++ b/clusters/demo1/custom-resource/clusterrole.yaml
@@ -57,7 +57,7 @@ rules:
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterrolebindings"]
     resourceNames: ["argocd-manager-main-binding"]
-    verbs: ["patch", "get"]
+    verbs: ["patch", "get", "list", "watch"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
