--- a/clusters/demo1/appset.yaml
+++ b/clusters/demo1/appset.yaml
@@ -30,5 +30,5 @@ spec:
         targetRevision: HEAD
       syncPolicy:
         automated:
-          prune: true
-          selfHeal: true
+          prune: false
+          selfHeal: false
