--- a/clusters/demo1/infr-apps/custom-resource.yaml
+++ b/clusters/demo1/infr-apps/custom-resource.yaml
@@ -11,7 +11,7 @@ spec:
       prune: false
     syncOptions:
     - FailOnSharedResource=false
-  project: k8s-spb2-backend1
+  project: default
   destination:
     name: k8s-spb2-backend1
     namespace: kube-system
