--- a/clusters/demo1/infr-apps/certmanager.yaml
+++ b/clusters/demo1/infr-apps/certmanager.yaml
@@ -11,7 +11,7 @@ spec:
       prune: false
     syncOptions:
     - CreateNamespace=true
-  project: k8s-spb2-backend1
+  project: default
   destination:
     server: https://spoke-1-control-plane:6443
     namespace: cert-manager
