--- a/clusters/demo1/infr-apps/custom-resource.yaml
+++ b/clusters/demo1/infr-apps/custom-resource.yaml
@@ -13,7 +13,7 @@ spec:
     - FailOnSharedResource=false
   project: default
   destination:
-    name: k8s-spb2-backend1
+    name: kind-spoke-1
     namespace: kube-system
   source:
       repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
