--- a/clusters/demo2/custom-resource/clusterrole.yaml
+++ b/clusters/demo2/custom-resource/clusterrole.yaml
@@ -3,7 +3,7 @@ kind: ClusterRole
 metadata:
   name: argocd-manager-watcher
 rules:
-  - apiGroups: ["admissionregistration.k8s.io", "apiregistration.k8s.io", "apps", "autoscaling.k8s.io", "autoscaling", "batch", "cert-manager.io", "extensions", "flowcontrol.apiserver.k8s.io", "grafana.integreatly.org", "jaegertracing.io", "keda.sh", "monitoring.coreos.com", "networking.k8s.io", "operator.victoriametrics.com", "policy", "rbac.authorization.k8s.io", "ricoberger.de", "", "velero.io"]
+  - apiGroups: ["admissionregistration.k8s.io", "apiregistration.k8s.io", "apps", "autoscaling.k8s.io", "autoscaling", "batch", "cert-manager.io", "extensions", "flowcontrol.apiserver.k8s.io", "grafana.integreatly.org", "jaegertracing.io", "keda.sh", "monitoring.coreos.com", "networking.k8s.io", "operator.victoriametrics.com", "policy", "rbac.authorization.k8s.io", "ricoberger.de", "", "velero.io", "storage.k8s.io"]
     resources:
     - mutatingwebhookconfigurations
     - validatingwebhookconfigurations
@@ -49,6 +49,9 @@ rules:
     - backupstoragelocations
     - schedules
     - volumesnapshotlocations
+    - persistentvolumeclaims
+    - persistentvolumes
+    - storageclasses
     verbs: ["get", "list", "watch"]
   - apiGroups: [""]
     resources: ["events"]
