--- a/clusters/demo1/custom-resource/clusterrole.yaml
+++ b/clusters/demo1/custom-resource/clusterrole.yaml
@@ -52,6 +52,7 @@ rules:
     - persistentvolumeclaims
     - persistentvolumes
     - storageclasses
+    - csistoragecapacities
     verbs: ["get", "list", "watch"]
   - apiGroups: [""]
     resources: ["events"]
