--- a/clusters/demo2/custom-resource/clusterrole.yaml
+++ b/clusters/demo2/custom-resource/clusterrole.yaml
@@ -60,6 +60,10 @@ rules:
   - apiGroups: ["rbac.authorization.k8s.io"]
     resources: ["clusterrolebindings"]
     verbs: ["create", "delete"]
+  - apiGroups: ["rbac.authorization.k8s.io"]
+    resources: ["clusterroles"]
+    resourceNames: ["argocd-manager-full"]
+    verbs: ["bind"]
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
