--- a/clusters/demo3/infr-apps/custom-resource.yaml
+++ b/clusters/demo3/infr-apps/custom-resource.yaml
@@ -11,7 +11,7 @@ spec:
       prune: false
     syncOptions:
     - FailOnSharedResource=false
-  project: delault
+  project: default
   destination:
     name: kind-spoke-3
     namespace: kube-system
