--- a/shared/jit-rbac-base/full-role.yaml
+++ b/shared/jit-rbac-base/full-role.yaml
@@ -21,6 +21,7 @@ rules:
       - cronjobs
       - jobs
       - certificates
+      - certificaterequests
       - issuers
       - ingresses
       - flowschemas
