--- a/clusters/demo3/infr-apps/certmanager.yaml
+++ b/clusters/demo3/infr-apps/certmanager.yaml
@@ -12,6 +12,8 @@ spec:
     syncOptions:
     - CreateNamespace=true
     - FailOnSharedResource=false
+    - Validate=false
+    - FailOnSharedResource=false
   project: default
   destination:
     name: kind-spoke-3
