--- a/clusters/demo1/infr-apps/custom-resource.yaml
+++ b/clusters/demo1/infr-apps/custom-resource.yaml
@@ -11,6 +11,7 @@ spec:
       prune: false
     syncOptions:
     - FailOnSharedResource=false
+    - Validate=false
   project: default
   destination:
     name: kind-spoke-1
