--- a/clusters/demo1/custom-resource/clusterrole.yaml
+++ b/clusters/demo1/custom-resource/clusterrole.yaml
@@ -75,4 +75,4 @@ rules:
     verbs: ["create","escalate"]
   - apiGroups: ["batch"]
     resources: ["jobs"]
-    verbs: ["delete"]    
+    verbs: ["delete", "list", "get"]
