--- a/shared/jit-rbac/pre-hook.yaml
+++ b/shared/jit-rbac/pre-hook.yaml
@@ -7,7 +7,7 @@ metadata:
     argocd.argoproj.io/sync-wave: "-1"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
-    jit-rbac-app: '{{.argocd.app.name}}'
+    jit-rbac-app: '{{.app.name}}'
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
