--- a/shared/jit-rbac/pre-hook.yaml
+++ b/shared/jit-rbac/pre-hook.yaml
@@ -1,18 +1,41 @@
-apiVersion: rbac.authorization.k8s.io/v1
-kind: ClusterRoleBinding
+apiVersion: batch/v1
+kind: Job
 metadata:
-  generateName: argocd-manager-full-
+  generateName: argocd-jit-rbac-setup-
+  namespace: kube-system
   annotations:
     argocd.argoproj.io/hook: PreSync
-    argocd.argoproj.io/sync-wave: "-1"
-  labels:
-    app.kubernetes.io/part-of: argo-jit-rbac
-    jit-rbac-app: '{{.app.name}}'
-roleRef:
-  apiGroup: rbac.authorization.k8s.io
-  kind: ClusterRole
-  name: argocd-manager-full
-subjects:
-  - kind: ServiceAccount
-    name: argocd-manager
-    namespace: kube-system
+    argocd.argoproj.io/hook-delete-policy: HookSucceeded,HookFailed
+spec:
+  ttlSecondsAfterFinished: 3600
+  backoffLimit: 1
+  template:
+    spec:
+      serviceAccountName: argocd-manager
+      restartPolicy: Never
+      containers:
+      - name: setup
+        image: bitnami/kubectl:latest
+        imagePullPolicy: IfNotPresent
+        command: ["/bin/sh", "-c"]
+        args:
+        - |
+          set -euo pipefail
+          echo "Creating temporary CRB for app $ARGOCD_APP_NAME"
+          cat <<EOF | kubectl apply -f -
+          apiVersion: rbac.authorization.k8s.io/v1
+          kind: ClusterRoleBinding
+          metadata:
+            generateName: argocd-manager-full-
+            labels:
+              app.kubernetes.io/part-of: argo-jit-rbac
+              jit-rbac-app: "$ARGOCD_APP_NAME"
+          roleRef:
+            apiGroup: rbac.authorization.k8s.io
+            kind: ClusterRole
+            name: argocd-manager-full
+          subjects:
+            - kind: ServiceAccount
+              name: argocd-manager
+              namespace: kube-system
+          EOF
