--- a/clusters/demo1/infr-apps/certmanager.yaml
+++ b/clusters/demo1/infr-apps/certmanager.yaml
@@ -20,6 +20,8 @@ spec:
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: shared/jit-rbac
+      kustomize:
+        nameSuffix: -k8s-spb2-backend1-certmanager
     - repoURL: 'https://github.com/nomad-mrkn/charts.git'
       targetRevision: HEAD
       path: cert-manager
