--- a/shared/jit-rbac/post-hook.yaml
+++ b/shared/jit-rbac/post-hook.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  generateName: argocd-jit-rbac-cleanup-
+  name: argocd-jit-rbac-cleanup
   namespace: kube-system
   annotations:
     argocd.argoproj.io/hook: PostSync
