--- a/shared/jit-rbac/post-hook.yaml
+++ b/shared/jit-rbac/post-hook.yaml
@@ -5,12 +5,13 @@ metadata:
   namespace: kube-system
   annotations:
     argocd.argoproj.io/hook: PostSync
-    argocd.argoproj.io/hook-delete-policy: HookSucceeded,HookFailed
+    argocd.argoproj.io/hook-delete-policy: BeforeHookCreation,HookSucceeded,HookFailed
     argocd.argoproj.io/sync-wave: "99"
   labels:
     app.kubernetes.io/part-of: argo-jit-rbac
 spec:
   backoffLimit: 0
+  ttlSecondsAfterFinished: 60
   template:
     metadata:
       labels:
@@ -27,4 +28,6 @@ spec:
           - |
             echo "Deleting temporary CRBs with label app.kubernetes.io/part-of=argo-jit-rbac";
             kubectl delete clusterrolebinding -l app.kubernetes.io/part-of=argo-jit-rbac --ignore-not-found=true;
+            echo "Deleting completed PostSync pods with label app.kubernetes.io/part-of=argo-jit-rbac";
+            kubectl delete pod -n kube-system -l app.kubernetes.io/part-of=argo-jit-rbac --field-selector=status.phase=Succeeded --ignore-not-found=true || true;
             echo "Done";
