--- a/clusters/demo1/infr-apps/custom-resource.yaml
+++ b/clusters/demo1/infr-apps/custom-resource.yaml
@@ -22,6 +22,8 @@ spec:
       path: shared/jit-rbac
       kustomize:
         nameSuffix: -k8s-spb2-backend1-custom-resource
+        commonLabels:
+          jit-rbac/app: k8s-spb2-backend1-custom-resource
     - repoURL: 'https://github.com/nomad-mrkn/zargocd.git'
       targetRevision: HEAD
       path: clusters/demo1/custom-resource
