--- a/clusters/demo1/appset.yaml
+++ b/clusters/demo1/appset.yaml
@@ -12,6 +12,7 @@ spec:
         - cluster: k8s-spb2-backend1
           url: https://spoke-1-control-plane:6443
   syncPolicy:
+    prune: true
     preserveResourcesOnDeletion: true
   template:
     metadata:
