--- a/clusters/demo1/custom-resource/clusterrole.yaml
+++ b/clusters/demo1/custom-resource/clusterrole.yaml
@@ -2,6 +2,8 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: argocd-manager-watcher
+  annotations:
+    argocd.argoproj.io/sync-wave: "-4"
 rules:
   - apiGroups: ["admissionregistration.k8s.io", "apiregistration.k8s.io", "apps", "autoscaling.k8s.io", "autoscaling", "batch", "cert-manager.io", "extensions", "flowcontrol.apiserver.k8s.io", "grafana.integreatly.org", "jaegertracing.io", "keda.sh", "monitoring.coreos.com", "networking.k8s.io", "operator.victoriametrics.com", "policy", "rbac.authorization.k8s.io", "ricoberger.de", "", "velero.io", "storage.k8s.io"]
     resources:
