--- a/shared/jit-rbac-base/full-role.yaml
+++ b/shared/jit-rbac-base/full-role.yaml
@@ -57,42 +57,42 @@ rules:
       - volumesnapshotlocations
     verbs: ["create", "update", "patch", "get", "list", "watch", "delete"]
   # Extra privileges needed to allow Argo to reconcile RBAC created by cert-manager Helm chart
-  - apiGroups: ["authorization.k8s.io"]
-    resources: ["subjectaccessreviews"]
-    verbs: ["create"]
-  - apiGroups: [""]
-    resources: ["events"]
-    verbs: ["create", "patch", "get", "update", "list", "watch"]
-  - apiGroups: [""]
-    resources: ["serviceaccounts/token"]
-    verbs: ["create"]
-  - apiGroups: ["certificates.k8s.io"]
-    resources: ["certificatesigningrequests", "certificatesigningrequests/status"]
-    verbs: ["get", "list", "watch", "update", "patch"]
-  - apiGroups: ["certificates.k8s.io"]
-    resources: ["signers"]
-    verbs: ["sign"]
-  - apiGroups: ["cert-manager.io"]
-    resources: ["signers"]
-    verbs: ["approve"]
-  - apiGroups: ["cert-manager.io"]
-    resources: ["certificaterequests/status", "certificaterequests/finalizers", "certificates/status", "certificates/finalizers"]
-    verbs: ["update", "patch"]
-  - apiGroups: ["cert-manager.io"]
-    resources: ["clusterissuers", "issuers"]
-    verbs: ["get", "list", "watch", "update", "patch"]
-  - apiGroups: ["cert-manager.io"]
-    resources: ["clusterissuers/status", "issuers/status"]
-    verbs: ["update", "patch"]
-  - apiGroups: ["acme.cert-manager.io"]
-    resources: ["orders", "orders/status", "orders/finalizers", "challenges", "challenges/status", "challenges/finalizers"]
-    verbs: ["create", "delete", "get", "list", "watch", "update", "patch"]
-  - apiGroups: ["gateway.networking.k8s.io"]
-    resources: ["gateways", "gateways/finalizers", "httproutes", "httproutes/finalizers"]
-    verbs: ["get", "list", "watch", "update", "patch"]
-  - apiGroups: ["networking.k8s.io"]
-    resources: ["ingresses/finalizers"]
-    verbs: ["update", "patch"]
-  - apiGroups: ["route.openshift.io"]
-    resources: ["routes/custom-host"]
-    verbs: ["create"]
+  # - apiGroups: ["authorization.k8s.io"]
+  #   resources: ["subjectaccessreviews"]
+  #   verbs: ["create"]
+  # - apiGroups: [""]
+  #   resources: ["events"]
+  #   verbs: ["create", "patch", "get", "update", "list", "watch"]
+  # - apiGroups: [""]
+  #   resources: ["serviceaccounts/token"]
+  #   verbs: ["create"]
+  # - apiGroups: ["certificates.k8s.io"]
+  #   resources: ["certificatesigningrequests", "certificatesigningrequests/status"]
+  #   verbs: ["get", "list", "watch", "update", "patch"]
+  # - apiGroups: ["certificates.k8s.io"]
+  #   resources: ["signers"]
+  #   verbs: ["sign"]
+  # - apiGroups: ["cert-manager.io"]
+  #   resources: ["signers"]
+  #   verbs: ["approve"]
+  # - apiGroups: ["cert-manager.io"]
+  #   resources: ["certificaterequests/status", "certificaterequests/finalizers", "certificates/status", "certificates/finalizers"]
+  #   verbs: ["update", "patch"]
+  # - apiGroups: ["cert-manager.io"]
+  #   resources: ["clusterissuers", "issuers"]
+  #   verbs: ["get", "list", "watch", "update", "patch"]
+  # - apiGroups: ["cert-manager.io"]
+  #   resources: ["clusterissuers/status", "issuers/status"]
+  #   verbs: ["update", "patch"]
+  # - apiGroups: ["acme.cert-manager.io"]
+  #   resources: ["orders", "orders/status", "orders/finalizers", "challenges", "challenges/status", "challenges/finalizers"]
+  #   verbs: ["create", "delete", "get", "list", "watch", "update", "patch"]
+  # - apiGroups: ["gateway.networking.k8s.io"]
+  #   resources: ["gateways", "gateways/finalizers", "httproutes", "httproutes/finalizers"]
+  #   verbs: ["get", "list", "watch", "update", "patch"]
+  # - apiGroups: ["networking.k8s.io"]
+  #   resources: ["ingresses/finalizers"]
+  #   verbs: ["update", "patch"]
+  # - apiGroups: ["route.openshift.io"]
+  #   resources: ["routes/custom-host"]
+  #   verbs: ["create"]
