--- a/clusters/demo1/infr-apps/fluent-bit.yaml
+++ b/clusters/demo1/infr-apps/fluent-bit.yaml
@@ -24,6 +24,7 @@ spec:
         nameSuffix: -k8s-spb2-backend1-fluent-bit
         commonLabels:
           jit-rbac/app: k8s-spb2-backend1-fluent-bit
+          jit-rbac/ttl: "45"
     - repoURL: 'https://github.com/nomad-mrkn/charts.git'
       targetRevision: HEAD
       path: fluent-bit
