--- a/clusters/demo1/infr-apps/victoria-metrics-operator.yaml
+++ b/clusters/demo1/infr-apps/victoria-metrics-operator.yaml
@@ -24,6 +24,7 @@ spec:
         nameSuffix: -k8s-spb2-backend1-victoria-metrics-operator
         commonLabels:
           jit-rbac/app: k8s-spb2-backend1-victoria-metrics-operator
+          jit-rbac/ttl: "60"
     - repoURL: 'https://github.com/nomad-mrkn/charts.git'
       targetRevision: HEAD
       path: victoria-metrics-operator
