--- a/clusters/demo1/infr-apps/certmanager.yaml
+++ b/clusters/demo1/infr-apps/certmanager.yaml
@@ -12,6 +12,7 @@ spec:
     syncOptions:
     - CreateNamespace=true
     - FailOnSharedResource=false
+    - Validate=false
   project: default
   destination:
     name: kind-spoke-1
@@ -28,5 +29,8 @@ spec:
       targetRevision: HEAD
       path: cert-manager
       helm:
+        releaseName: k8s-spb2-backend1-certmanager
         values: |
           installCRDs: true
+          startupapicheck:
+            enabled: false
